[package]
name = "heightmap"
version = "0.6.1"
authors = ["Meshiest <meek.mesh@gmail.com>"]
edition = "2018"

[dependencies]
brickadia = "0.1.24"
image = "0.23.4"
clap = "2.33.0"
byteorder = "1.3.4"
uuid = "0.8.2"
log = "0.4.17"
env_logger = "0.10.0"
egui = { version = "0.20.0", optional = true }
nfd = { version = "0.0.4", optional = true }
eframe = { version = "0.20.1", optional = true }
lazy_static = { version = "1.4.0", optional = true }
poll-promise = { version = "0.2.0", optional = true }

[features]
gui = ["egui", "eframe", "lazy_static", "poll-promise", "nfd"]

[[bin]]
name = "heightmap_gui"
path = "src/gui_main.rs"
required-features = ["gui"]
