[package]
name = "heightmap"
version = "0.7.0"
authors = ["Isaac <gpg@reheatedcake.io>"]
edition = "2024"
rust-version = "1.88"


[dependencies]
image = { version = "0.25.8", features = ["png"] }
clap = "2.33.0"
log = "0.4.28"
env_logger = "0.10.0"
eframe = { version = "0.32.3", optional = true }
poll-promise = { version = "0.2.0", optional = true }
brdb = "0.4.0"
clippers = "0.1.2"
egui = { version = "0.32.3", optional = true }
native-dialog = { version = "0.9.0", optional = true }
clipboard-win = { version = "5.4.1", features = [
  "windows-win",
], optional = true }
egui_extras = { version = "0.32.3", features = [
  "file",
  "image",
], optional = true }

[features]
default = ["gui"]
gui = [
  "egui",
  "eframe",
  "egui_extras",
  "poll-promise",
  "native-dialog",
  "clipboard-win",
]
egui = ["dep:egui"]
clipboard-win = ["dep:clipboard-win"]

[[bin]]
name = "heightmap_gui"
path = "src/gui_main.rs"
required-features = ["gui"]
